2013/06/27: v21
    1. Update for IGAS v39.
    2. Load/Save settings command added for the action bar.