@@ -47,7 +47,7 @@ L["Please confirm to create new action bar"] = "请确认是否新建动作条?"
 L["Swap Pop-up action"] = "切换弹出条动作"
 L["Please input the new set name"] = "请输入新的配置名称"
 L["Do you want overwrite the existed set?"] = "是否覆盖已有的配置?"
-L[L"Do you want load the set?"] = "是否确定载入该配置?"
+L["Do you want load the set?"] = "是否确定载入该配置?"
 
 L["Spell Binding"] = "技能绑定"
 L["Lock Raid Panel"] = "锁定团队面板"
@@ -76,3 +76,19 @@ L["Raid roster indicator"] = "团队角色指示"
 L["Power bar"] = "能力资源条"
 L["Name indicator"] = "姓名指示"
 L["Range indicator"] = "距离指示"
+
+L["Show"] = "显示面板"
+L["Show in a raid"] = "在团队中"
+L["Show in a party"] = "在小队中"
+L["Show the player in party"] = "在小队中显示玩家"
+L["Show when solo"] = "在单独游戏时"
+
+L["Group By"] = "分组"
+L["NONE"] = "无"
+L["GROUP"] = "小组"
+L["CLASS"] = "职业"
+L["ROLE"] = "职责"
+
+L["Sort By"] = "排序"
+L["INDEX"] = "顺序"
+L["NAME"] = "名字"
