@@ -47,7 +47,7 @@ L["Please confirm to create new action bar"] = "請確認是否新建動作條?"
 L["Swap Pop-up action"] = "切替彈出條動作"
 L["Please input the new set name"] = "請輸入新的配置名稱"
 L["Do you want overwrite the existed set?"] = "是否確定覆蓋已有的配置?"
-L[L"Do you want load the set?"] = "是否確定載入該配置?"
+L["Do you want load the set?"] = "是否確定載入該配置?"
 
 L["Spell Binding"] = "技能綁定"
 L["Lock Raid Panel"] = "鎖定團隊面板"
@@ -76,3 +76,19 @@ L["Raid roster indicator"] = "團隊角色指示"
 L["Power bar"] = "能力資源條"
 L["Name indicator"] = "姓名指示"
 L["Range indicator"] = "距離指示"
+
+L["Show"] = "顯示面板"
+L["Show in a raid"] = "在團隊中"
+L["Show in a party"] = "在小隊中"
+L["Show the player in party"] = "在小隊中顯示玩家"
+L["Show when solo"] = "在單獨遊戲時"
+
+L["Group By"] = "分組"
+L["NONE"] = "無"
+L["GROUP"] = "小組"
+L["CLASS"] = "職業"
+L["ROLE"] = "職責"
+
+L["Sort By"] = "排序"
+L["INDEX"] = "順序"
+L["NAME"] = "名字"
